--- a/.github/workflows/publish-clamav.yml
+++ b/.github/workflows/publish-clamav.yml
@@ -34,4 +34,5 @@ jobs:
         docker-context: docker
         docker-file: docker/Dockerfile
         metadata-tags: |
+          type=ref,event=branch
           type=sha,format=long,prefix=,suffix=
