--- a/helm/main/templates/networkpolicy.yaml
+++ b/helm/main/templates/networkpolicy.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: {{ include "main.fullname" . }}-allow-same-namespace
+  name: allow-same-namespace
 spec:
   podSelector: {}
   ingress:
