--- a/load-testing/job.yaml
+++ b/load-testing/job.yaml
@@ -11,7 +11,14 @@ spec:
         imagePullPolicy: Always
         env:
         - name: CLAMAV_HOST
-          value: clamav
+          value: clamav.b5395d-dev.svc.cluster.local
         - name: CLAMAV_PORT
           value: '3310'
+        resources:
+          limits:
+            cpu: 400m
+            memory: 1Gi
+          requests:
+            cpu: 200m
+            memory: 400Mi
       restartPolicy: Never
