feat: add deploy workflow dispatch

--- a/.github/workflows/apply-silver-dev.yml
+++ b/.github/workflows/apply-silver-dev.yml
@@ -8,9 +8,6 @@ on:
     - .github/workflows/apply-silver-dev.yml
     - network-policies/silver/dev/**
 
-env:
-  NAMESPACE: b5395d-dev
-
 jobs:
   apply:
     runs-on: ubuntu-22.04
@@ -28,6 +25,6 @@ jobs:
       uses: ./.github/actions/apply-terraform
       with:
         context: network-policies/silver/dev
-        namespace: ${{ env.NAMESPACE }}
+        namespace: ${{ vars.OPENSHIFT_NAMESPACE }}
         openshift-server-url: ${{ secrets.OPENSHIFT_SERVER }}
         openshift-token: ${{ secrets.OPENSHIFT_TOKEN }}
