--- a/helm/_clamav/templates/statefulset.yaml
+++ b/helm/_clamav/templates/statefulset.yaml
@@ -108,9 +108,10 @@ spec:
       nodeSelector:
         {{ toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
+      {{- if .Values.affinity }}
+      affinity: {{ .Values.affinity | toYaml | nindent 8 }}
+      {{- else if .Values.affinityTemplate }}
+      affinity: {{ tpl .Values.affinityTemplate . | nindent 8 }}
       {{- end }}
       {{- with .Values.tolerations }}
       tolerations:
